--- a/.github/workflows/parallel-job-workflow.yml
+++ b/.github/workflows/parallel-job-workflow.yml
@@ -17,8 +17,8 @@ on:
       - main
 
   # Scheduled trigger at 5:00 AM UTC, Monday through Friday
-  schedule:
-    - cron: '0 5 * * 1-5'
+  #schedule:
+  #  - cron: '0 5 * * 1-5'
 
 # Jobs defined in the workflow
 jobs:
@@ -40,6 +40,9 @@ jobs:
       - name: Print a message for non-main branches
         if: github.ref != 'refs/heads/main'
         run: echo "This is not the main branch."
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Run tests
         run: npm test
@@ -66,6 +69,9 @@ jobs:
       - name: Print a message for non-main branches
         if: github.ref != 'refs/heads/main'
         run: echo "This is not the main branch."
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Run tests
         run: npm test
