--- a/.github/workflows/parallel-job-workflow.yml
+++ b/.github/workflows/parallel-job-workflow.yml
@@ -41,8 +41,8 @@ jobs:
         if: github.ref != 'refs/heads/main'
         run: echo "This is not the main branch."
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Check directory
+        run: pwd; ls -l
 
       - name: Run tests
         run: npm test
@@ -70,8 +70,8 @@ jobs:
         if: github.ref != 'refs/heads/main'
         run: echo "This is not the main branch."
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Check directory
+        run: pwd; ls -l
 
       - name: Run tests
         run: npm test
