--- a/.github/workflows/parallel-job-workflow.yml
+++ b/.github/workflows/parallel-job-workflow.yml
@@ -7,14 +7,14 @@ on:
   workflow_dispatch:
 
   # Automatic trigger on push events to the main branch
-  push:
-    branches:
-      - main
+  #push:
+  #  branches:
+  #    - main
 
   # Automatic trigger on pull request events targeting the main branch
-  pull_request:
-    branches:
-      - main
+  #pull_request:
+  #  branches:
+  #    - main
 
   # Scheduled trigger at 5:00 AM UTC, Monday through Friday
   #schedule:
@@ -26,10 +26,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Set up Node.js 
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
           node-version: latest
 
@@ -52,10 +52,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Set up Node.js 
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
           node-version: latest
 
