--- a/.github/workflows/my-first-workflow.yml
+++ b/.github/workflows/my-first-workflow.yml
@@ -5,18 +5,18 @@ on:
   workflow_dispatch:
   
   # Push to main
-  push:
-    branches:
-      - main
+  #push:
+  #  branches:
+  #    - main
 
   # Scheduled run
   #schedule:
   #  - cron: '0 5 * * 1-5'
 
   # Any pull request activity on main
-  pull_request:
-    branches:
-      - main
+  #pull_request:
+  #  branches:
+  #    - main
 
 jobs:
   build:
