--- a/.github/workflows/parallel-job-workflow.yml
+++ b/.github/workflows/parallel-job-workflow.yml
@@ -7,9 +7,9 @@ on:
   workflow_dispatch:
 
   # Automatic trigger on push events to the main branch
-  #push:
-  #  branches:
-  #    - main
+  push:
+    branches:
+      - main
 
   # Automatic trigger on pull request events targeting the main branch
   #pull_request:
